dataset1235/2025-2/805158916/users/2200760145/executions/2651470117_1462915504.log
== SUBMISSION (2025-08-25 13:59:23)
-- CODE: 
impoort math
from math import *
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:59:25)
-- CODE: 
impoort math
from math import *
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:44:31)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento) / 2 * tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:00:03)
-- CODE: 
impoort math
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * lado * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:46:21)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento) / 2 * math.tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:59:24)
-- CODE: 
impoort math
from math import *
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:53:09)
-- CODE: 
from math import *
comprimento = float(input)
apotema = (comprimento / 2) * (math.tan(math.pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimento = float(input)
                  ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimento = float(input)
                  ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimento = float(input)
                  ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimento = float(input)
                  ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimento = float(input)
                  ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    comprimento = float(input)
                  ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:00:02)
-- CODE: 
impoort math
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * lado * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:47:03)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento) // 2 * math.tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:54:28)
-- CODE: 

from math import *
comprimento = input( float())
apotema = (comprimento / 2) * (math.tan(math.pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:00:01)
-- CODE: 
impoort math
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * lado * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:56:13)
-- CODE: 

from math import *
comprimento = float(input())
apotema = ((comprimento )/2 )* (tan(pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:47:49)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento / 2) * (math.tan(math.pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento / 2) * (math.tan(math.pi / 5))
               ~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:45:25)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento) / 2 * tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:47:06)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento) // 2 * math.tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) // 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:55:17)
-- CODE: 

from math import *
comprimento = float(input())
apotema = (comprimento / 2) * (tan(math.pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (tan(math.pi / 5))
                                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (tan(math.pi / 5))
                                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (tan(math.pi / 5))
                                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (tan(math.pi / 5))
                                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (tan(math.pi / 5))
                                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = (comprimento / 2) * (tan(math.pi / 5))
                                       ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:00:11)
-- CODE: 
import math
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * lado * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:46:19)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento) / 2 * math.tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:55:29)
-- CODE: 

from math import *
comprimento = float(input())
apotema = (comprimento / 2) * (tan(pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
90.82
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:45:31)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento) / 2 * tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:46:18)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento) / 2 * math.tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:53:59)
-- CODE: 
from math import *
comprimento = float(input())
apotema = (comprimento) / 2 * math.tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:59:34)
-- CODE: 
impoort math
from math import *
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * lado * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:53:59)
-- CODE: 
from math import *
comprimento = float(input())
apotema = (comprimento) / 2 * math.tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
                                  ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:00:00)
-- CODE: 
impoort math
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * lado * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:58:16)
-- CODE: 
impoort math
from math import *
comprimento = float(input())
apotema = ((comprimento )/2 )* (tan(pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:58:13)
-- CODE: 
impoort math
from math import *
comprimento = float(input())
apotema = ((comprimento )/2 )* (tan(pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:59:24)
-- CODE: 
impoort math
from math import *
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:43:50)
-- CODE: 
import math
lado = float(input())
apotema = lado /(2 * math.tan(math.pi / 5))
area = ( 5/2 ) * lado * apotema
print (round(area, 2 ))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:55:30)
-- CODE: 

from math import *
comprimento = float(input())
apotema = (comprimento / 2) * (tan(pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 13:46:22)
-- CODE: 
from math import *
comprimento = input( float())
apotema = (comprimento) / 2 * math.tan(math.pi / 5)
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = (comprimento) / 2 * math.tan(math.pi / 5)
              ~~~~~~~~~~~~~~^~~
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 13:58:15)
-- CODE: 
impoort math
from math import *
comprimento = float(input())
apotema = ((comprimento )/2 )* (tan(pi / 5))
area = ( 5/2 ) * comprimento * apotema
print (round(area, 2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    impoort math
            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
